# django-rest-api

./: .gitignore  db.sqlite3  pyproject.toml
api/: models.py  urls.py  views.py
api/migrations/: 0001_initial.py
api/templates/: index.html
config/: settings.py
